README.md added

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </picture>
         </div>
         <div class="btn-cover">
-            <img src="./images/icon-dice.svg" class="btn" alt="dice">
+            <img src="./images/icon-dice.svg" class="btn" alt="dice" onclick="collectAll()">
         </div>    
     </div>
    
