--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </picture>
         </div>
         <div class="btn-cover">
-            <img src="./images/icon-dice.svg" class="btn" alt="dice" onclick="collectAll()">
+            <img src="./images/icon-dice.svg" id="btn" alt="dice">
         </div>    
     </div>
    
